c/examples/gcc/testsuite/c-c++-common/vector-1.c
/* { dg-do compile } */
/* { dg-options "" } */

/* Check for application of ~ on vector types.  */

#define vector __attribute__((vector_size(16) ))

vector float a;
vector int a1;

void f(void)
{
 a =  ~a; /* { dg-error "" } */
 a1 =  ~a1;
}
